Alterned flex properties for contact logos for mobile and fixed wrap issues for arrows by changing bs grid properties

--- a/layout/_contact.scss
+++ b/layout/_contact.scss
@@ -25,17 +25,20 @@
   &__row-container {
     display: flex;
     align-items: center;
+    justify-content: center;
   }
 
   &__logo-container {
+    min-height: 50vh;
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
-    padding: 30px 50px;
+    padding: 20px 50px;
   }
 
   &__logo {
-    max-height: 70px;
+    max-height: 50px;
     height: auto;
   }
 
@@ -48,6 +51,19 @@
 
 .contact__logo:hover {
   cursor: pointer;
+}
+
+@media screen and (min-width: 576px) {
+  .contact__logo-container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 30px 50px;
+  }
+
+  .contact__logo {
+    max-height: 70px;
+  }
 }
 
 @media screen and (min-width: 992px) {
