--- a/layout/_portfolio.scss
+++ b/layout/_portfolio.scss
@@ -6,6 +6,7 @@
     width: 90vw;
     overflow-x: scroll;
     margin: 0 auto;
+    padding-bottom: 100px;
     -ms-overflow-style: none;
     scrollbar-width: none;
   }
@@ -40,7 +41,7 @@
   &__img {
     width: 100%;
     height: auto;
-    min-width: 180px;
+    min-width: 160px;
   }
 
   &__arrow-container {
@@ -50,7 +51,7 @@
   }
 
   &__arrow--x {
-    max-width: 25px;
+    max-width: 20px;
     height: auto;
   }
 
@@ -64,6 +65,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 0 15px 15px 15px;
   }
 
   &__btn-container--lg {
@@ -114,6 +116,10 @@
 
   .portfolio__text-container {
     padding: 30px 20px 30px 15px;
+  }
+
+  .portfolio__btn-container {
+    padding: 0 15px;
   }
 }
 
