--- a/main.css
+++ b/main.css
@@ -165,6 +165,7 @@
   width: 90vw;
   overflow-x: scroll;
   margin: 0 auto;
+  padding-bottom: 100px;
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
@@ -211,7 +212,7 @@
 .portfolio__img {
   width: 100%;
   height: auto;
-  min-width: 180px;
+  min-width: 160px;
 }
 
 .portfolio__arrow-container {
@@ -227,7 +228,7 @@
 }
 
 .portfolio__arrow--x {
-  max-width: 25px;
+  max-width: 20px;
   height: auto;
 }
 
@@ -251,6 +252,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding: 0 15px 15px 15px;
 }
 
 .portfolio__btn-container--lg {
@@ -296,6 +298,9 @@
   }
   .portfolio__text-container {
     padding: 30px 20px 30px 15px;
+  }
+  .portfolio__btn-container {
+    padding: 0 15px;
   }
 }
 
@@ -439,23 +444,31 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .contact__logo-container {
+  min-height: 50vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 30px 50px;
+  padding: 20px 50px;
 }
 
 .contact__logo {
-  max-height: 70px;
+  max-height: 50px;
   height: auto;
 }
 
@@ -471,6 +484,24 @@
 
 .contact__logo:hover {
   cursor: pointer;
+}
+
+@media screen and (min-width: 576px) {
+  .contact__logo-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 30px 50px;
+  }
+  .contact__logo {
+    max-height: 70px;
+  }
 }
 
 @media screen and (min-width: 992px) {
